parser/tests/bad/call02.st
% mismatch number of formals, expect 'n' but get 'm'

procedure p(a: int, b: int)
  % empty
end p

p(1, 2 ,3)
